<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>db_beta_interface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="binggwong@todo.todo">binggwong</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>dynamixel_sdk</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <buildtool_depend>std_msgs</buildtool_depend>
  <buildtool_depend>sensor_msgs</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
    
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
